# Locus

./: Cargo.toml  README.md
src/: app.rs  catalog.rs  file_io.rs  main.rs  note.rs  todo.rs  ui.rs
