[package]
name = "terminal_notes"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.23.0"      # For terminal UI components
crossterm = "0.26.0"    # For terminal control
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_json = "1.0"      # For JSON handling
chrono = "0.4"          # For date/time operations
dirs = "5.0"     
csv = "1.1"       # For managing user directories
